HelloWorld/force-app/main/default/objects/Stock__c/fields/Aadhar_card__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_card__c</fullName>
    <label>Aadhar card</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>