HelloWorld/force-app/main/default/objects/Stock__c/fields/Amount_balance__c.field-meta.xml
<CustomField>
    <fullName>Amount_balance__c</fullName>
    <label>Amount balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>