HelloWorld/force-app/main/default/objects/Stock__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>DOB</label>
    <type>Date</type>
</CustomField>