HelloWorld/force-app/main/default/objects/Stock__c/fields/Eligible_for_voating__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_voating__c</fullName>
    <formula>IF( Age__c &gt;=18, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for voating</label>
    <type>Checkbox</type>
</CustomField>