HelloWorld/force-app/main/default/objects/Stock__c/fields/Mob_No__c.field-meta.xml
<CustomField>
    <fullName>Mob_No__c</fullName>
    <label>Mob No.</label>
    <type>Phone</type>
</CustomField>