HelloWorld/force-app/main/default/objects/Stock__c/fields/Pending_amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pending amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>