HelloWorld/force-app/main/default/objects/Stock__c/fields/Required_doc_list__c.field-meta.xml
<CustomField>
    <fullName>Required_doc_list__c</fullName>
    <label>Required doc list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Aadhar card</fullName>
            </value>
            <value>
                <fullName>Electric bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>