HelloWorld/force-app/main/default/objects/Stock__c/validationRules/First_name_should_contain_three_char.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_should_contain_three_char</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( First_Name__c )&lt;3</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First name should contain three char</errorMessage>
</ValidationRule>