HelloWorld/force-app/main/default/objects/Stock__c/validationRules/Major_male_applicants_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Major_male_applicants_NA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(Age__c &gt;=18),
ISPICKVAL( Gender__c ,&apos;Male&apos;)
)</errorConditionFormula>
    <errorMessage>Major male applicants are not allowed</errorMessage>
</ValidationRule>