HelloWorld/force-app/main/default/objects/Stock__c/validationRules/Minor_male_and_Female_are_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Minor_male_and_Female_are_not_allowed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Age__c &lt;=18,
OR(
 ISPICKVAL( Gender__c ,&apos;Male&apos;),

 ISPICKVAL( Gender__c ,&apos;Femle&apos;)
))</errorConditionFormula>
    <errorMessage>Minor Male and Female applicants are not allowed</errorMessage>
</ValidationRule>