HelloWorld/force-app/main/default/objects/Stock__c/validationRules/Minor_male_female_transgender_not_allow.validationRule-meta.xml
<ValidationRule>
    <fullName>Minor_male_female_transgender_not_allow</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Age__c &lt;=18,
OR(
 ISPICKVAL( Gender__c ,&apos;Male&apos;),
 ISPICKVAL( Gender__c ,&apos;Femle&apos;),
 ISPICKVAL( Gender__c ,&apos;Transgender&apos;) 
))</errorConditionFormula>
    <errorMessage>Minor male female transgender are not allowed</errorMessage>
</ValidationRule>