HelloWorld/force-app/main/default/objects/Stock__c/validationRules/PAN_and_Aadhar_is_req_in_req_doc_list.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_and_Aadhar_is_req_in_req_doc_list</fullName>
    <active>false</active>
    <errorConditionFormula>OR(

 NOT(INCLUDES( Required_doc_list__c ,&apos;PAN Card&apos;)),
 NOT(INCLUDES( Required_doc_list__c ,&apos;Aadhar card&apos;)) 

)</errorConditionFormula>
    <errorDisplayField>Required_doc_list__c</errorDisplayField>
    <errorMessage>PAN and Aadhar card is req in req doc list</errorMessage>
</ValidationRule>