HelloWorld/force-app/main/default/objects/Stock__c/validationRules/PAN_card_is_req_in_req_doc_list.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_card_is_req_in_req_doc_list</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
INCLUDES( Required_doc_list__c , &apos;PAN Card&apos;))</errorConditionFormula>
    <errorDisplayField>Required_doc_list__c</errorDisplayField>
    <errorMessage>PAN card is required in req doc list</errorMessage>
</ValidationRule>