HelloWorld/force-app/main/default/objects/Stock__c/validationRules/PAN_is_req_for_male_applicants.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_is_req_for_male_applicants</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Gender__c ,&apos;Male&apos;),
ISBLANK( PAN_Card__c ) 
)</errorConditionFormula>
    <errorDisplayField>PAN_Card__c</errorDisplayField>
    <errorMessage>PAN no is req for male applicants</errorMessage>
</ValidationRule>