HelloWorld/force-app/main/default/objects/Stock__c/validationRules/Prevent_age_betn_40_to_60.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_age_betn_40_to_60</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

  Age__c &gt;=40,
  NOT(Age__c &lt;60),
  ISPICKVAL( Gender__c ,&apos;Femle&apos;) 
)</errorConditionFormula>
    <errorMessage>For female applicants age should be in between 40 to 60 years</errorMessage>
</ValidationRule>